# uvmcx

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: manage.py
app/mcx/: asgi.py  settings.py  urls.py  wsgi.py
